--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "extract": "node scripts/extract.js data/tacobell-nutrition-allergy-19092017-1.pdf dist/menu.json"
   },
   "author": "",
   "license": "ISC",
